--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://www.clortox.com/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Tylers Website'
 theme = "clortox"
