--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,7 @@
 baseURL = 'https://www.clortox.com/'
 languageCode = 'en-us'
+LanguageCode = 'en-us'
 title = 'Tylers Website'
 theme = "clortox"
+[author]
+  name = 'Tyler'
