Update base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.clortox.com/'
+baseURL = 'https://clortox.github.io/tylerperkins.xyz/'
 languageCode = 'en-us'
 LanguageCode = 'en-us'
 title = 'Tylers Website'
