--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://clortox.github.io/tylerperkins.xyz/'
+baseURL = 'http://tylerperkins.xyx'
 languageCode = 'en-us'
 LanguageCode = 'en-us'
 title = 'Tylers Website'
